--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-    <title>Your APP NAME</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Raleway&display=swap" rel="stylesheet">    <title>Your APP NAME</title>
   </head>
   <body class="container">
     <noscript>You need to enable JavaScript to run this app.</noscript>
